DS3 2018 Final Version

--- a/ComputationalPhenotyping.ipynb
+++ b/ComputationalPhenotyping.ipynb
@@ -11,7 +11,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this notebook, we will apply some unsupervised and supervised learning techniques in order to analyze phenotypic data."
+    "_by Thomas Walter, Mines ParisTech, Institut Curie, INSERM U900._\n",
+    "\n",
+    "In this notebook, we will apply unsupervised and supervised learning techniques in order to analyze phenotypic data. The phenotypic data comes in the form of manually annotated cell morphologies: to each cell a manual annotator has assigned one phenotypic class, such as `interphase`, `prometaphase`, ... These classes are mutually exclusive."
    ]
   },
   {
@@ -25,7 +27,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, we load the training data, as saved by [CellCognition](https://www.cellcognition-project.org). CellCognition saves the training set data as an `arff` file. In this file, we have all features for the annotated training samples and the class of each sample, saved in the last column."
+    "First, we load the training data, as saved by [CellCognition](https://www.cellcognition-project.org). CellCognition is a tool for the analysis of High Content Screening data and computational phenotyping. In particular, it is also very useful for manual annotation of cellular data. The software saves the training set data as an `arff` file. In this file, we have all features for the annotated training samples and the class of each sample, saved in the last column."
    ]
   },
   {
@@ -53,7 +55,7 @@
     "- the string representation of the class\n",
     "- the color that has been chosen during annotation\n",
     "\n",
-    "We will therefore import these definitions by reading the csv-file."
+    "We will therefore import these definitions by reading the `csv` file."
    ]
   },
   {
@@ -95,7 +97,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `arff`-file we have imported contains both the class labels and the features. Obviously, we need to separate in order to train classifiers, etc. We will therefore create a design matrix $X$ containing all columns of the data frame and an $y$ vector containing the class labels (where we take the labels from class_definition, rather than the string representation)."
+    "The classes have the following meaning: `Interphase` is normally related to the cell cycle and regroups all non-mitotic phases (G1, S, G2). Here however, we take `Interphase` as a shortcut for normal interphase, meaning that interphase nuclei are nuclei of normal, non-dividing cells. `Elongated` nuclei are also non-dividing but have a an elongated shape, `Polylobed` is an abnormal nuclear morphology usually resulting from segregation defects (i.e. the nuclei are not properly distributed to the daughter nuclei during division and / or the nuclear envelope does not form correctly). `Apoptosis` is cell death, and the other classes correspond to morphologies appearing during division: `Prometaphase`, `Metaphase` and `Anaphase` are normal morphologies during division, `MAP` stands for Metaphase Alignment Problem and indicates uncomplete alignment of chromosomes in the metaphase plate. \n",
+    "\n",
+    "The `arff`-file we have imported contains both the class labels and the features. Obviously, we need to separate class labels from features in order to train classifiers, etc. We will therefore create a design matrix $X$ containing all columns of the data frame except the last and an $y$ vector containing the class labels (where we take the labels from class_definition, rather than the string representation)."
    ]
   },
   {
@@ -191,7 +195,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Apparently, there is one feature that does not vary for the entire data set, we can therefore safely remove it. Again, for many Machine Learning algorithm, it does not hurt to keep the feature, but for some it can be detrimental. We therefore prefer to remove the corresponding column."
+    "Apparently, there is one feature that does not vary for the entire data set, we can therefore safely remove it. Again, for many Machine Learning algorithms, it does not hurt to keep the feature, but for some it can be detrimental. We therefore prefer to remove the corresponding column."
    ]
   },
   {
@@ -208,7 +212,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We next normalize the data. We clearly saw that the different features we are using ave very different ranges (some are between 0 and 1, others can reach very high values). Again, data normalization is not necessary for all machine learning algorithms. For some however, it is absolutely essential to apply data normalization before. Imagine for instance that you just calculate the Euclidean distance between data points $\\|x_i - x_j\\|_2$ (for instance for the purpose of clustering or visualization). In this case a feature with absolute values would completely dominate this metric. Here we use a standard normalization (zero mean and unity variance). If $x_j$ is one feature (column of $X$), we define $x^{norm}_j$ as:\n",
+    "We next normalize the data. We clearly saw that the different features we are using have very different ranges (some are between 0 and 1, others can reach very high values). Again, data normalization is not necessary for all machine learning algorithms. For some however, it is absolutely essential. Imagine for instance that you just calculate the Euclidean distance between data points $\\|x_i - x_j\\|_2$ (for instance for the purpose of clustering or visualization). In this case a feature with absolute values would completely dominate this metric. Here we use a standard normalization (zero mean and unity variance). If $x_j$ is one feature (column of $X$), we define $x^{norm}_j$ as:\n",
     "\n",
     "\\begin{equation}\n",
     "x^{norm}_j = \\frac{x_j - \\mu(x_j)}{\\sigma_{x_j}}  \n",
@@ -276,7 +280,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "One way of looking at the data is to visualize joint distributions of features via scatterplots of feature pairs."
+    "#### Plotting features"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "One way of looking at the data is to visualize joint distributions of features via scatterplots of feature pairs. For this, we use `matplotlib`. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -349,13 +369,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color=blue *Question: How do you interpret this graph? What can be said about the importance of the two features?*>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "<font color=red> *How do you interpret this plot? Are these features useful?*</font>"
    ]
   },
@@ -363,7 +376,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The next way of visualizing the data is to find a low dimensional reprentation. There are many methods in order to achieve this goal. The two most popular methods are Principal Component Analysis (PCA) and t-Distributed Stochastic Neighbor Embedding (t-SNE). In the following, we will apply these methods on our training data.  "
+    "We see from this scatterplot, that in addition to being highly correlated, both features are - when taken separately - not discriminative for these two classes. However, when we consider them together, they allow us to separate the two classes with reasonable accuracy. This is therefore a good example of the danger of applying such ad hoc techniques in order to reduce features."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Principal Component Analysis (PCA)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Another way of visualizing the data is to find a low dimensional reprentation. There are many methods in order to achieve this goal. The two most popular methods are Principal Component Analysis (PCA) and t-Distributed Stochastic Neighbor Embedding (t-SNE). In the following, we will apply these methods on our training data."
    ]
   },
   {
@@ -387,25 +414,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "pca = PCA(n_components=2)\n",
     "principalComponents = pca.fit_transform(X)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -443,7 +454,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, we turn to a newer projection technique which is widely used in Machine Learning, but also in Computational Biology (in particular for sequencing data): t-SNE. In this method, one considers the probabilities $p_{ij}$ of two points $x_i$ and $x_j$ to be considered as neighbors. t-SNE aims at finding a low-dimensional feature space, where the distribution of the corresponding $q_{ij}$ are as close as possible to $p_{ij}$ in the sense of KL-divergence:\n",
+    "We observe that some classes are relatively well separated, others have a strong overlap. Interestingly, we also see that the space different classes occupy is very different for different classes. `Apoptosis` for instance seems to cover a large region in the feature space. Indeed, this is a highly variable class: dead cells can have a highly variable appearance."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### t-distributed stochastic neighbor embedding"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, we turn to a newer projection technique which is widely used in Machine Learning, but also in Computational Biology (in particular for sequencing data): t-SNE. Loosely speaking, one considers the probabilities $p_{ij}$ of two points $x_i$ and $x_j$ to be neighbors. t-SNE aims at finding a low-dimensional feature space, where the distribution of the corresponding $q_{ij}$ (the probability that $x^\\prime_i$ and $x^\\prime_j$ are neighbors in the low-dimensional feature representation) are as close as possible to $p_{ij}$ in the sense of KL-divergence:\n",
     "\\begin{equation}\n",
     "KL(P\\|Q) = \\sum_{i\\not= j}p_{ij}\\log\\frac{p_{ij}}{q_{ij}}\n",
     "\\end{equation}"
@@ -494,6 +519,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We observe that the grouping of the points corresponds much more to the actual class labels. We also observe that the distances between points are very different. While in PCA, the interphase cluster was very small, the apoptosis cluster occupied a large space. Here, the apoptosis cluster is much smaller, while the interphase cluster is becoming larger. We also observe that some classes seem to be difficult to separate by unsupervised techniques (they do not form individual clusters), in particular `MAP` that mixes happily with `Prometaphase` and `Apoptosis`. Furthermore, we see that `Anaphase` and `Metaphase` do not form natural clusters, but their distribution seems to be shifted (albeit overlapping). Such a scenario indicates that probably these classes would have been hard to find in an unsupervised setting but may be relatively easy to separate in a supervised setting."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Hierarchical clustering"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As the heading indicates, this is not primarily a data visualization technique, but a method for unsupervised learning (i.e. a method to identify classes from data without annotation). Hierarchical clustering however has also nice visualization properties, because we can visualize the nested structures in our data and also display the feature combinations corresponding to the individual clusters in so scalled heatmaps. Thanks to its power for exploratory data analysis, hierarchical clustering is widely used in biology. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -518,7 +564,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "g = sns.clustermap(X, method='single', metric='euclidean', \n",
+    "g = sns.clustermap(X, method='ward', metric='euclidean', \n",
     "                   row_colors=colorvec, robust=True, cmap=cmap)"
    ]
   },
@@ -533,7 +579,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Again, we observe that some classes can be well distinguished, others are clustered together. When interpreting such a plot, it is essential to also look at the dendrogram. Actually, the true clustering information is represented by the dendrogram and not by the order of the rows. Indeed, I could flip the cluster order at any merging point of the dendrogram without changing the clustering result provided by the hierarchical clustering. In the above example with `method=\"ward\"` and `metric=\"euclidean\"`, this concerns for instance the distinction between the lower part of the anaphase/metaphase block and the apoptosis block next to it: in reality, these cells are (wrongly) clustered together."
+    "Again, we observe that some classes can be well distinguished, others are clustered together. When interpreting such a plot, it is essential to also look at the dendrogram. Actually, the true clustering information is represented by the dendrogram and not by the order of the rows. Indeed, we could flip the cluster order at any merging point of the dendrogram without changing the clustering result provided by the hierarchical clustering. \n",
+    "\n",
+    "In the above example we used Ward's method for agglomeration and euclidean distance (`method=\"ward\"`, `metric=\"euclidean\"`). In an unsupervised setting, we could certainly infer some of these groups from the data set without manual annotation. Others - as mentioned above - do not form individual clusters. In this case, it is essential to impose prior knowledge in form of manual annotations."
    ]
   },
   {
@@ -692,7 +740,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clf = svm.SVC(C=0.01, kernel='linear')"
+    "clf = svm.SVC(C=1, kernel='linear')"
    ]
   },
   {
@@ -739,26 +787,27 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "As expected, we see that the performance on the training set is better than on the test set. Indeed, evaluating the performance on the training set is a typical mistake in machine learning, as this always gives overoptimistic results. While in this case, this was easy to avoid, it is sometimes more challenging to know whether our performance evaluation is correct in that it does not intermingle training and test set.\n",
-    "\n",
-    "Here, we obtain a very similar result to what we obtained from the RF classifier, even though we use a linear kernel and did not yet optimize the parameter $C$."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.model_selection import cross_val_predict\n",
     "res = cross_val_predict(clf, X, y)\n",
     "\n",
     "cm_rf = confusion_matrix(y, res)\n",
     "\n",
     "print(', '.join([label_to_name[l] for l in class_labels]))\n",
     "print(cm_rf)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As expected, we see that the performance on the training set is better than on the test set. Indeed, evaluating the performance on the training set is a typical mistake in machine learning, as this always gives overoptimistic results. While in this case, this was easy to avoid, it is sometimes more challenging to know whether our performance evaluation is correct in that it does not intermingle training and test set.\n",
+    "\n",
+    "Here, we obtain a very similar result to what we obtained from the RF classifier, even though we use a linear kernel and did not yet optimize the parameter $C$. This is not a typical situation however: in most cases, optimization of $C$ is crucial. "
    ]
   },
   {
@@ -819,7 +868,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From here, we see that for this case, optimization of the parameter $C$ only marginally changes the accuracy. This is unusual, but it can happen."
+    "From here, we see that for this case, optimization of the parameter $C$ only marginally changes the accuracy. This is unusual, but it can happen. Nevertheless, it is essential to always check!"
    ]
   },
   {
@@ -828,13 +877,6 @@
    "source": [
     "<font color=red> *Train a classifier on the principal components. Plot the accuracy depending on the number of the principal components used. For 4 components, test the effect of the parameter C.* </font>"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -860,7 +902,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
