--- a/ComputationalPhenotyping.ipynb
+++ b/ComputationalPhenotyping.ipynb
@@ -112,7 +112,7 @@
     "\n",
     "class_definition = data_utils.read_class_definition(folder)\n",
     "images, output = data_utils.read_image_data_from_sample_folder('./data/classifier/Classifier_full_2015_06_04_b')\n",
-    "X, y = data_utils.read_image_data('./data/classifier/Classifier_full_2015_06_04_b')"
+    "X_img, y_img = data_utils.read_image_data('./data/classifier/Classifier_full_2015_06_04_b')"
    ]
   },
   {
@@ -121,8 +121,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(X.shape)\n",
-    "print(y.shape)"
+    "print(X_img.shape)\n",
+    "print(y_img.shape)"
    ]
   },
   {
@@ -142,8 +142,8 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(6, 6))\n",
-    "idx = np.random.randint(len(X))\n",
-    "vis_utils.plot_image(ax, X[idx], class_definition['label_to_name'][y[idx]])"
+    "idx = np.random.randint(len(X_img))\n",
+    "vis_utils.plot_image(ax, X_img[idx], class_definition['label_to_name'][y_img[idx]])"
    ]
   },
   {
@@ -159,11 +159,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(y)\n",
-    "len(y)\n",
-    "np.unique(y)\n",
     "fig = plt.figure(figsize=(17, 17))\n",
-    "vis_utils.plot_array(fig, X, y, samples_per_class=17)"
+    "vis_utils.plot_array(fig, X_img, y_img, samples_per_class=17)"
    ]
   },
   {
@@ -538,7 +535,7 @@
    "outputs": [],
    "source": [
     "from sklearn.manifold import TSNE\n",
-    "X_embedded = TSNE(n_components=2).fit_transform(X)"
+    "X_embedded = TSNE(n_components=2, perplexity=10).fit_transform(X)"
    ]
   },
   {
@@ -557,7 +554,7 @@
    "source": [
     "<font color=red> *How does this compare to the results obtained by PCA?*</font>\n",
     "\n",
-    "<font color=red> *Test different values of perplexity.*</font>"
+    "<font color=red> *Test different values of perplexity (2, 10, 30, 50).*</font>"
    ]
   },
   {
@@ -606,7 +603,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "g = sns.clustermap(X, method='ward', metric='euclidean', \n",
+    "g = sns.clustermap(X, method='single', metric='euclidean', \n",
     "                   row_colors=colorvec, robust=True, cmap=cmap)"
    ]
   },
@@ -676,7 +673,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rf = RandomForestClassifier(n_estimators=200, oob_score=True)"
+    "rf = RandomForestClassifier(n_estimators=5, oob_score=True)"
    ]
   },
   {
@@ -702,6 +699,13 @@
    "outputs": [],
    "source": [
     "print('overall accuracy: %.2f' % rf.oob_score_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<font color=red> *Try different values for `n_estimators`. What do you observe?* </font>"
    ]
   },
   {
@@ -833,6 +837,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<font color=red> *How do you explain this difference? Which of the values is more realistic?* </font>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -923,6 +934,13 @@
    "source": [
     "<font color=red> *Train a classifier on the principal components. Plot the accuracy depending on the number of the principal components used. For 4 components, test the effect of the parameter C.* </font>"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
